Fix MSKINS-12: Internet Explorer 9 shows scrollbar on <div id=navcolumn>
git-svn-id: https://svn.apache.org/repos/asf/maven/skins/trunk@1222956 13f79535-47bb-0310-9956-ffa450edef68

--- a/maven-stylus-skin/src/main/resources/css/maven-base.css
+++ b/maven-stylus-skin/src/main/resources/css/maven-base.css
@@ -52,6 +52,7 @@ div.clear hr{
  width: 170px;
  float:left;
  overflow: auto;
+ padding-bottom: 2px; /* IE-9 scrollbar-fix */
 }
 #bodyColumn {
   margin-right: 1.5em;
